[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/weapons/weapon_broom.png" type="Texture" id=1]
[ext_resource path="res://assets/weapons/weapon_dustpan.png" type="Texture" id=2]
[ext_resource path="res://scripts/weapon_buttons.gd" type="Script" id=3]

[node name="weapon_buttons" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="DustPan" type="Button" parent="."]
margin_left = 185.0
margin_top = 560.0
margin_right = 1413.0
margin_bottom = 1782.0
rect_scale = Vector2( 0.13, 0.13 )
icon = ExtResource( 2 )

[node name="Broom" type="Button" parent="."]
margin_top = 560.0
margin_right = 1228.0
margin_bottom = 1782.0
rect_scale = Vector2( 0.13, 0.13 )
icon = ExtResource( 1 )

[node name="block_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="swing_timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="pressed" from="DustPan" to="." method="_on_DustPan_pressed"]
[connection signal="pressed" from="Broom" to="." method="_on_Broom_pressed"]
[connection signal="timeout" from="block_timer" to="." method="_on_block_timer_timeout"]
[connection signal="timeout" from="swing_timer" to="." method="_on_swing_timer_timeout"]
